--- a/package.json
+++ b/package.json
@@ -61,24 +61,25 @@
     "eslint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "devDependencies": {
-    "@types/vscode": "^1.76.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
-    "@types/node": "18.x",
+    "@types/node": "~18.14.6",
+    "@types/vscode": "^1.76.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
+    "@vscode/test-electron": "^2.3.0",
     "eslint": "^8.35.0",
     "eslint-plugin-jsdoc": "^40.0.1",
     "glob": "^9.2.1",
     "mocha": "^10.2.0",
-    "typescript": "^4.9.5",
+    "prettier": "^2.8.4",
     "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "@vscode/test-electron": "^2.3.0",
-    "prettier": "^2.8.4"
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@types/webpack-env": "^1.18.0",
     "vscode-html-languageservice": "^5.0.4",
     "vscode-json-languageservice": "^5.3.2"
   }
