--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "SEE LICENSE IN <LICENSE>",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.70.0"
+    "vscode": "^1.76.0"
   },
   "categories": [
     "Other",
@@ -29,7 +29,7 @@
     "onLanguage:javascript",
     "onLanguage:javascriptreact"
   ],
-  "icon": "./public/images/logo.svg",
+  "icon": "./public/images/logo.png",
   "repository": {
     "type": "git",
     "url": "https://gitee.com/mxp131011/element-plus-doc"
@@ -56,7 +56,7 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run package",
+    "vscode:prepublish": "npm run package",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
@@ -64,7 +64,7 @@
     "postversion": "vsce package && git push",
     "更新": "ncu -u && ncu -g",
     "更新[含测试版]": "ncu --target newest",
-    "安装": "pnpm install",
+    "安装": "npm install",
     "删除": "rimraf node_modules && rimraf pnpm-lock.yaml && rimraf package-lock.json",
     "tsc": "tsc --noEmit --skipLibCheck",
     "prettier": "prettier --write ./**/*.{js,json,vue,ts,jsx,cjs,mjs,tsx,cts,mts,wxss,wxml,wxs}",
@@ -73,7 +73,7 @@
   "devDependencies": {
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
-    "@types/node": "~18.14.6",
+    "@types/node": "~18.15.0",
     "@types/vscode": "^1.76.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
@@ -86,11 +86,11 @@
     "prettier": "^2.8.4",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack": "^5.76.0",
+    "webpack-cli": "^5.0.1",
+    "@types/webpack-env": "^1.18.0"
   },
   "dependencies": {
-    "@types/webpack-env": "^1.18.0",
     "vscode-html-languageservice": "^5.0.4",
     "vscode-json-languageservice": "^5.3.2"
   }
