--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "element-plus 的一个工具插件,用于智能提示，悬停显示文档等",
   "publisher": "mxp131011",
   "license": "SEE LICENSE IN LICENSE",
-  "baseImagesUrl": "./",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.76.0"
   },
@@ -33,7 +32,7 @@
   "icon": "public/images/logo.png",
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/mxp131011/element-plus-doc"
+    "url": "https://github.com/mxp131011/element-plus-doc"
   },
   "main": "./dist/extension.js",
   "contributes": {
@@ -61,7 +60,7 @@
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
-    "发布": "vsce package --baseImagesUrl https://gitee.com/mxp131011/element-plus-doc/tree/master/",
+    "发布": "vsce package",
     "更新依赖": "ncu -u && ncu -g",
     "更新依赖[含测试版]": "ncu --target newest",
     "安装": "npm install",
