--- a/package.json
+++ b/package.json
@@ -39,10 +39,31 @@
     "configuration": {
       "title": "element-plus-doc",
       "properties": {
-        "custom.prefix": {
-          "type": "string",
-          "default": "",
+        "customPrefix": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "pattern": "^[a-zA-Z]{1,10}$"
+          },
+          "maxItems": 3,
+          "default": [
+            "base"
+          ],
           "description": "%contributes.properties.customPrefix.description%"
+        },
+        "website.chinese": {
+          "format": "URI",
+          "type": "string",
+          "pattern": "^https?://([\\w-]+\\.)+[\\w-]+(/[\\w-./]*)?/$",
+          "default": "https://element-plus.org/zh-CN/",
+          "description": "%contributes.properties.website.chinese.description%"
+        },
+        "website.english": {
+          "type": "string",
+          "format": "URI",
+          "pattern": "^https?://([\\w-]+\\.)+[\\w-]+(/[\\w-./]*)?/$",
+          "default": "https://element-plus.org/en-US/",
+          "description": "%contributes.properties.website.english.description%"
         }
       }
     },
