--- a/package.json
+++ b/package.json
@@ -105,22 +105,23 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "~18.15.3",
     "@types/vscode": "^1.76.0",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "@vscode/test-electron": "^2.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.36.0",
     "eslint-plugin-jsdoc": "^40.0.2",
-    "glob": "^9.2.1",
+    "glob": "^9.3.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.4",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1",
-    "@types/webpack-env": "^1.18.0"
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@vscode/vsce": "^2.18.0",
     "vscode-html-languageservice": "^5.0.4",
     "vscode-json-languageservice": "^5.3.2"
   }
