--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "element-plus 的一个工具插件,用于智能提示，悬停显示文档等",
   "publisher": "mxp131011",
   "license": "SEE LICENSE IN LICENSE",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "engines": {
     "vscode": "^1.76.0"
   },
@@ -96,11 +96,12 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "webpack",
-    "watch": "webpack --watch",
+    "vscode:prepublish": "rimraf README && npm run package",
+    "compile": "rimraf README && webpack",
+    "watch": "rimraf README && webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
-    "发布": "vsce package",
+    "发布": "ts-node ./md/index.ts && vsce package",
+    "生成MD": " ts-node ./md/index.ts",
     "更新依赖": "ncu -u && ncu -g",
     "更新依赖[含测试版]": "ncu --target newest",
     "安装": "npm install",
@@ -131,6 +132,8 @@
   },
   "dependencies": {
     "@vscode/vsce": "^2.18.0",
+    "fs": "^0.0.1-security",
+    "ts-node": "^10.9.1",
     "vscode-html-languageservice": "^5.0.4",
     "vscode-json-languageservice": "^5.3.2"
   }
