--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "element-plus 的一个工具插件,用于智能提示，悬停显示文档等",
   "publisher": "mxp131011",
   "license": "SEE LICENSE IN LICENSE",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "engines": {
     "vscode": "^1.76.0"
   },
@@ -96,9 +96,9 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "rimraf README && npm run package",
+    "vscode:prepublish": "npm run package",
     "compile": "rimraf README && webpack",
-    "watch": "rimraf README && webpack --watch",
+    "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
     "发布": "ts-node ./md/index.ts && vsce package",
     "生成MD": " ts-node ./md/index.ts",
